# SIFT

./: .gitignore  README.md  delete.py
code/: CMakeLists.txt  main.cpp
code/src/: CMakeLists.txt  interst_point.hpp  src.hpp
code/utils/: CMakeLists.txt  utils.hpp
script/: img2bin  interest_point.py  interface.py  main.py  make_image.py  test_harris_CV.py  util_conv.py  utils.py
